# campfire

./: .gitignore  ARCHITECTURE_PLAN.md  CLAUDE.md  LICENSE  README.md  TESTING_GUIDE.md  deploy.sh  deploy_all.sh  environment.yml  migration_plan.md  supabase_schema.md  todo.md  versions.toml
.claude/: settings.json
.claude/commands/: astro-review.md  bugfix.md  feature.md  pipeline-release.md  review-pr.md
.github/ISSUE_TEMPLATE/: bug_report.yml  data_request.yml  feature_request.yml
.github/workflows/: claude-code-review.yml  claude.yml
deploy/: README.md  pyproject.toml
deploy/campfire_deploy/: __init__.py  astrometry.py  cli.py  config.py  deploy.py  discover.py  generate.py  generate_sed.py  nircam.py  objects.py  r2.py  summary.py  supabase.py  tiles.py  tiles_engine.py
deploy/data/: programs.toml
docs/: design-miri-reduction.md  design-object-lists.md  design-objects-migration.md  design-unified-object-page.md
notes/: API_IMPLEMENTATION.md  NIRCam_plan.md  REFACTORING_SUMMARY.md  analyze_column_widths.sql
pipeline/: CHANGELOG.md  README.md  TEST.MD  __init__.py  config.toml  fields.example.toml  fitting.py  imaging.toml  observations.example.toml  observations.toml  plot_slits.py  plots.py  pyproject.toml  query.py  reduction.py  reduction_msaexp.py  run.sh  slits.py  tiles.py
pipeline/campfire_pipeline/: __init__.py  _thread_caps.py  cli.py  config.py
pipeline/campfire_pipeline/common/: cfp.py  cli.py  igm.py  io.py  parallel.py  query.py  spectral.py  version.py  wcs.py
pipeline/campfire_pipeline/common/imaging/: drizzle.py  field.py  geometry.py  manifest.py  orchestrate.py  prefetch.py  skyfit.py  status.py
pipeline/campfire_pipeline/data/: config_default.toml  jades_dr4_empirical_wavecorr.asdf
pipeline/campfire_pipeline/metadata/: pointings.py  reader.py  shutters.py  summary.py
pipeline/campfire_pipeline/miri/: cfp.py  cli.py  constants.py  field.py  orchestrate.py
pipeline/campfire_pipeline/nircam/: bkgsub.py  cfp.py  cli.py  constants.py  drizzle.py  engine.py  expmap.py  field.py  geometry.py  manifest.py  orchestrate.py  outlier_detect.py  prefetch.py  rgb.py  skyfit.py  stage1.py  stage2.py  stage3.py  status.py  trilogy.py
pipeline/campfire_pipeline/nircam/refcat/: __init__.py  cli.py  compare.py  extract.py  hsc.py  io.py  merge.py  query.py
pipeline/campfire_pipeline/nircam/steps/: __init__.py  _flat.py  _plots.py  apply_masks.py  bad_pixel.py  detector1.py  diag_striping.py  edge.py  image2.py  jhat.py  outlier.py  persistence.py  preview.py  resample.py  sky.py  skymatch.py  striping.py  variance.py  wcs_shift.py  wisp.py
pipeline/campfire_pipeline/nirspec/: cli.py  constants.py  ds9.py  engine.py  extraction.py  fitting.py  mask_regions.py  masks.py  metafile.py  mpl_editor.py  observation.py  plots.py  redshift.py  redshift_fitting.py  slits.py  stage1.py  stage2.py  stage3.py  stuck_shutters.py  templates.py
pipeline/tests/: test_config.py  test_consensus.py  test_mask_regions.py  test_masks.py  test_nircam_diag_striping.py  test_nircam_rgb.py  test_version.py
python/: README.md  pyproject.toml  test_api.py
python/campfire/: __init__.py  calibration.py  catalog.py  cli.py  client.py  config.py  exceptions.py  flags.py  imaging.py  models.py  output.py  plotting.py  state.py  sync.py  tui.py
python/campfire/api/: __init__.py  client.py  session.py
python/campfire/auth/: __init__.py  credentials.py  device_flow.py  tokens.py
python/campfire/db/: __init__.py  export.py  store.py
python/campfire/deploy/: __init__.py  cli.py  config.py  deploy.py  discover.py  generate_rgb.py  generate_sed.py  nircam.py  nircam_masks.py  objects.py  photometry.py  programs.example.toml  r2.py  reconcile.py  remove.py  summary.py  supabase.py  tiles.py  tiles_engine.py
python/examples/: quickstart.ipynb
python/tests/: __init__.py  conftest.py  test_calibration.py  test_client.py  test_exceptions.py  test_flags.py  test_local_first.py  test_plotting.py  test_query_spectra.py  test_reconcile.py  test_store.py
scripts/: backfill_exposure_time.py  backfill_hashes.py  cleanup_duplicate_sources.py  compare_best_redshift.py  cosmos_inspec.py  deploy.py  deploy_nircam.py  deploy_old.py  diag_striping_score_audit.py  generate_seed.py  generate_slits.py  generate_tiles.py  migrate_observation.py  plot_slits.py  populate_objects.py  programs.toml  push_inspections.py  redeploy_redshifts.py  reduce.py  release-pipeline.sh  repair_implicit_signoff_redshifts.py  repair_msametfl.py  split_rubies.py  test_diag_striping.py  tiles.py
supabase/: config.toml  seed.sql
supabase/migrations/: 20260207154255_remote_schema.sql  20260208182449_fix_adjacent_objects_distance_column.sql  20260214_add_exposure_time_to_spectra.sql  20260214_add_max_exposure_time.sql  20260218000000_add_map_layers.sql  20260218100000_add_tile_version_to_map_layers.sql  20260219100000_optimize_filtered_objects_rpc.sql  20260219200000_add_slit_regions.sql  20260311000000_extract_get_filtered_object_ids.sql  20260312200000_add_pagination_to_filtered_object_ids.sql  20260313000000_cursor_based_adjacent_objects.sql  20260313110000_fix_paginated_sort_row_number.sql  20260313200000_add_cycle_to_programs.sql  20260318000000_csv_export_include_flags.sql  20260318000000_fix_sort_with_coord_search.sql  20260318000000_rls_helper_functions.sql  20260318200000_fix_rls_public_program_access.sql  20260319100000_add_updated_since_filter.sql  20260319100001_fix_paginated_overload.sql  20260319100002_fix_thumbnail_columns.sql  20260324000000_fix_crossmatch_propagation.sql  20260324100000_sync_rpc_total_accessible.sql  20260327000000_spectra_view_mode.sql  20260327100000_fix_spectra_view_thumbnail_columns.sql  20260328000000_rename_objects_to_targets.sql  20260328100000_fix_spectra_paginated_sort_order.sql  20260328200000_spectra_filter_per_spectrum.sql  20260328204719_normalize_schema.sql  (+64 more)
web/: .gitignore  .vercelignore  README.md  campfire-frontend-plan.md  font-showcase.html  next.config.ts  package-lock.json  package.json  tailwind.config.ts  test_migration.sql  tsconfig.json
(+466 files in other folders)
