[project]
name = "campfire-pipeline"
version = "0.3.0"
description = "JWST data reduction pipeline"
requires-python = ">=3.12"
dependencies = [
    "jwst>=1.20,<1.21",
    "astropy>=6.1",
    "numpy>=2.0",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "toml>=0.10",
    "click>=8.0",
    "tqdm>=4.65",
    "spectres>=2.2",
    "numba>=0.59",
    "bagpipes @ git+https://github.com/hollisakins/bagpipes.git",
    "jhat",
    "snowblind",
    "shapely",
    "photutils>=1.13",
    "regions>=0.6",
    "tomlkit>=0.13",
]

[project.scripts]
cfpipe = "campfire_pipeline.cli:main"
campfire-nirspec = "campfire_pipeline.nirspec.cli:main"
campfire-nircam = "campfire_pipeline.nircam.cli:main"

[tool.setuptools.packages.find]
include = ["campfire_pipeline*"]

[tool.setuptools.package-data]
campfire_pipeline = ["data/*.fits", "data/*.toml", "data/*.hdf5"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
