[project]
name = "campfire-pipeline"
description = "JWST data reduction pipeline"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "jwst>=1.20,<1.21",
    "astropy>=6.1",
    "numpy>=2.0",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "toml>=0.10",
    "click>=8.0",
    "tqdm>=4.65",
    "spectres>=2.2",
    "numba>=0.59",
    "bagpipes @ git+https://github.com/hollisakins/bagpipes.git",
    "jhat",
    "snowblind",
    "shapely",
    "photutils>=1.13",
    "regions>=0.6",
    "tomlkit>=0.13",
    "JWST_FOV_plotter>=0.4",
]

[project.scripts]
cfpipe = "campfire_pipeline.cli:main"
campfire-nirspec = "campfire_pipeline.nirspec.cli:main"
campfire-nircam = "campfire_pipeline.nircam.cli:main"

[tool.setuptools.packages.find]
include = ["campfire_pipeline*"]

[tool.setuptools.package-data]
campfire_pipeline = ["data/*.fits", "data/*.toml", "data/*.hdf5"]

[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Versions come from monorepo git tags of the form `pipeline-vX.Y.Z` only.
# This isolates the pipeline subpackage version from unrelated commits in
# `web/`, `python/`, `supabase/`, etc.
root = ".."
tag_regex = "^pipeline-v(?P<version>\\d+\\.\\d+\\.\\d+)$"
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "pipeline-v*"]
write_to = "campfire_pipeline/_version.py"
fallback_version = "0.0.0+unknown"
