[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "campfire-api"
version = "0.1.0"
description = "Python API client for CAMPFIRE - COSMOS Archive of MultiPle-Field Internal Reductions & Extractions"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "CAMPFIRE Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "astropy>=5.0",
    "requests>=2.28.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "click>=8.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
]

[project.scripts]
campfire = "campfire.cli:main"

[project.optional-dependencies]
plotting = [
    "plotly>=5.18.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "plotly>=5.18.0",
]
all = [
    "plotly>=5.18.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/campfire"
Documentation = "https://campfire.readthedocs.io"
Repository = "https://github.com/yourusername/campfire"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
