[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "campfire"
version = "0.3.0"
description = "Python client and deployment tools for CAMPFIRE — COSMOS Archive of MultiPle-Field Internal Reductions & Extractions"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "CAMPFIRE Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    # Core (auth, API client, CLI)
    "click>=8.0",
    "requests>=2.28.0",
    "astropy>=6.0",
    "numpy>=1.24.0",
    "rich>=13.0",
    "textual>=0.70.0",
    "packaging",
    "toml>=0.10",
    # Deploy DB operations
    "supabase>=2.0",
    # Deploy R2 uploads (will be replaced by presigned URLs in future)
    "boto3>=1.28",
]

[project.scripts]
campfire = "campfire.cli:main"

[project.optional-dependencies]
deploy = [
    "scipy>=1.12",
    "matplotlib>=3.8",
    "photutils>=1.10",
    "reproject",
    "Pillow>=10.0",
]
plotting = [
    "plotly>=5.18.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "plotly>=5.18.0",
]
all = [
    "campfire[deploy,plotting]",
]

[project.urls]
Homepage = "https://github.com/hollisakins/campfire"
Repository = "https://github.com/hollisakins/campfire"

[tool.setuptools.packages.find]
include = ["campfire*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
